Auth-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth

  annotations:
    alb.ingress.kubernetes.io/group.name: microservices
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:328837371751:certificate/be9a6329-668b-469c-8d0a-d12caa237d74
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  ingressClassName: alb

  rules:
  - host: auth.didin.in
    http:
      paths:
      - path: /api/auth/
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
